Fixing sonar lint issues for unused imports and cognitive complexity.